# AI-Agents-Using-AGNO

Projects/Personal_AI_Learning_Coach/: app.py
Projects/Personal_AI_Learning_Coach/state/: learning_state.json
Projects/Personal_AI_Learning_Coach/tools/: evaluation_tool.py  progress_tool.py
Projects/agno-data-science-team/: .gitignore  app.py  main.py  pyproject.toml
Projects/agno-data-science-team/data/: data_cleaned.csv
Projects/agno-data-science-team/data/features/: test.csv  train.csv
Projects/agno-data-science-team/models/: preprocessor.joblib
Projects/agno-data-science-team/reports/: car_details_report.md  cleaning_log_data_cleaned.md
Projects/agno-data-science-team/src/: data_cleaning.py  data_plotting.py  preprocesssing.py
Projects/medium-article-generator/: app.py  main.py  pyproject.toml
Projects/medium-article-generator/medium_articles/: Demystifying_the_Black_Box_How_Explainable_AI_is_Building_Trust_Saving_Lives_and_Shaping_the_Future.md  report.md
Projects/medium-article-generator/medium_articles/medium_articles2/: AI-Agents.md
agno-building-ai-agents/: README.md
agno-building-ai-agents/agno-basics/: README.md  agent.py  agent_with_memory_1.py  agent_with_memory_2.py  agent_with_memory_3.py  agent_with_state_1.py  agent_with_state_2.py  agent_with_state_3.py  agent_with_state_4.py  agent_with_tools.py  chat_history.db  demo.db  main.py  pyproject.toml
agno-building-ai-agents/agno-basics/chat_history_db/: demo.db  session_history.json
agno-building-ai-agents/agno-basics/session_state_db/: shopping.db  temp.db
agno-building-ai-agents/agno-knowledge/: .gitignore  agent.py  knowledge_base.py  main.py  pyproject.toml
agno-building-ai-agents/agno-teams/: .gitignore  main.py  pyproject.toml  team_state.py  teams_basics.py
agno-building-ai-agents/agno-teams/vector_db/lancedb/knowledge_table.lance/_transactions/: 0-1b5e6af2-4c66-4d8c-a6b6-6d4a22b1746f.txn
agno-building-ai-agents/agno-workflows/: branching.py  conditional.py  looping.py  main.py  parallel.py  pyproject.toml  sequential.py
