[project]
name = "medium-article-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.1",
    "arxiv>=2.2.0",
    "ddgs>=9.6.1",
    "fastapi[standard]>=0.120.0",
    "google-api-python-client>=2.185.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "googlesearch-python>=1.3.0",
    "lxml-html-clean>=0.4.3",
    "newspaper4k>=0.9.3.1",
    "openai>=2.6.1",
    "praw>=7.8.1",
    "pycountry>=24.6.1",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "tweepy>=4.16.0",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.3",
]
